bugfix: links in header where wrong color

--- a/sass/layout/_header.sass
+++ b/sass/layout/_header.sass
@@ -15,6 +15,8 @@ header
         width: 86%
         display: grid
         grid-template: 47px 47px / repeat(5,1fr)
+        a
+            color: $main-color
 
 #Brand
     grid-column-start: 1
