--- a/sass/master.css
+++ b/sass/master.css
@@ -43,6 +43,10 @@ header nav {
       grid-template: 47px 47px/repeat(5, 1fr);
 }
 
+header nav a {
+  color: #383737;
+}
+
 #Brand {
   -ms-grid-column: 1;
       grid-column-start: 1;
@@ -504,37 +508,79 @@ a {
 }
 
 .contact-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  height: 100vh;
-  background-image: url(../img/contact-bg.jpg);
-  background-size: cover;
-  background-position: center;
-}
-
-.contact-container {
-  width: 86%;
-  height: 67%;
-}
-
-.contact-grid {
   display: -ms-grid;
   display: grid;
-  width: 100%;
+  -ms-grid-columns: 7% (1fr)[5] 7%;
+      grid-template-columns: 7% repeat(5, 1fr) 7%;
+  min-height: 834px;
+  background-color: #383737;
+}
+
+.contact-bg {
+  background-image: url("../img/contact-bg.jpg");
   height: 100%;
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
-  -ms-grid-columns: (1fr)[5];
-      grid-template-columns: repeat(5, 1fr);
-  background-color: red;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 5;
+  grid-column: 1 / 6;
+  background-position: center;
+  background-size: 101%;
+}
+
+.contact-bg-partner {
+  -ms-grid-column: 6;
+  -ms-grid-column-span: 2;
+  grid-column: 6 / 8;
+  background-color: #383737;
+  height: 100%;
+}
+
+.contact-contact-us {
+  position: absolute;
+  width: 16%;
+  height: 655px;
+  left: 7.4%;
+  top: 195px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+  color: #F5F3F1;
+}
+
+.contact-galleries {
+  position: absolute;
+  width: 34%;
+  height: 726px;
+  left: 58.5%;
+  top: 172px;
+  background-color: #F5F3F1;
+}
+
+.contact-contact-us h3 {
+  margin-top: 0;
+  margin-bottom: 42px;
+}
+
+.contact-contact-us .contact-contact-info h3 {
+  margin-bottom: 42px;
+}
+
+.contact-contact-us .contact-contact-info p {
+  margin: 0;
+}
+
+.contact-contact-us .contact-contact-info .contact-biz, .contact-contact-us .contact-contact-info .contact-location {
+  font-weight: 300;
+}
+
+.contact-contact-us .contact-contact-info .contact-email {
+  margin-top: 35px;
+  margin-bottom: 70px;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 22px;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }
 
 .about-wrapper .about-body-header {
